[tool.poetry]
name = "py50"
version = "0.3.2"
description = "Generate Dose-Response Curves"
authors = ["Tony Eight Lin <tonyelin@tmu.edu.tw>"]
license = "GPL-3.0"
readme = "README_pypi.md"
packages = [{ include = "py50"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
pandas = ">=2.1.3"
numpy = ">=1.26.2"
matplotlib = ">=3.8.1"
scipy = ">=1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
